fixed the button to be displayed only when it's on mobile device

--- a/client/src/pages/Player.module.css
+++ b/client/src/pages/Player.module.css
@@ -24,3 +24,13 @@
 button.clicked {
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25) inset;
 }
+
+@media (min-width: 1000px) {
+  .artistInfo {
+    display: block;
+  }
+
+  .bottomButtons {
+    display: none;
+  }
+}
